--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.22.0",
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -24,10 +28,14 @@
     "next": "15.3.4",
     "query-string": "^9.2.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.58.1",
     "svix": "^1.67.0",
     "tailwind-merge": "^3.3.1",
-    "uploadthing": "^7.7.3"
+    "uploadthing": "^7.7.3",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
