--- a/package.json
+++ b/package.json
@@ -19,19 +19,21 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@stripe/stripe-js": "^7.4.0",
     "@uploadthing/react": "^7.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.522.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
-    "next": "15.3.4",
+    "next": "^15.3.4",
     "query-string": "^9.2.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.58.1",
+    "stripe": "^18.2.1",
     "svix": "^1.67.0",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.3",
